--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Controlling Snow</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Controlling Snow</h1>
 		</header>
 			<section id="content">
 				<canvas id="SnowflakeCatcher" data-processing-sources="SnowflakeCatcher.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+	    	Drag mouse to stop Snow!
+		    Click on green to get the snow moving again!
 	    </footer>
 	</body>
 </html>
