--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
-	<body>
+	<body background="snow.jpg">
+
 		<header>
 			<h1>Controlling Snow</h1>
 		</header>
